--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,24 +8,16 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100 min-h-screen flex flex-col items-center">
-    <div class="container bg-white p-8 rounded shadow-md w-full max-w-4xl mt-8">
-        
+<body class="bg-gray-900 min-h-screen flex flex-col items-center text-gray-200">
+    <div class="container bg-gray-800 p-8 rounded shadow-md w-full max-w-4xl mt-8">
         <div class="header flex justify-between items-center mb-6">
-            <button class="home-button bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-600 transition-colors" onclick="location.href='/'">Home</button>
+            <button class="home-button bg-purple-500 text-white font-bold py-2 px-4 rounded hover:bg-purple-600 transition-colors" onclick="location.href='/'">Home</button>
             <div class="buttons flex space-x-4">
-                <button
-                    class="manage-job-posts-button bg-green-500 text-white font-bold py-2 px-4 rounded hover:bg-green-600 transition-colors"
-                    onclick="location.href=`{% url 'manage_job_posts' %}`">Manage Job Posts
-                </button>
-                <button
-                    class="my-forum-posts-button bg-gray-500 text-white font-bold py-2 px-4 rounded hover:bg-gray-600 transition-colors"
-                    onclick="location.href=`{% url 'user_forum_posts' %}`">My Forum Posts
-                </button>
+                <button class="manage-job-posts-button bg-green-500 text-white font-bold py-2 px-4 rounded hover:bg-green-600 transition-colors" onclick="location.href=`{% url 'manage_job_posts' %}`">Manage Job Posts</button>
+                <button class="my-forum-posts-button bg-gray-500 text-white font-bold py-2 px-4 rounded hover:bg-gray-600 transition-colors" onclick="location.href=`{% url 'user_forum_posts' %}`">My Forum Posts</button>
             </div>
         </div>
 
-        
         {% if messages %}
             <div class="mb-4">
                 {% for message in messages %}
@@ -36,62 +28,58 @@
             </div>
         {% endif %}
 
-        
         <img id="avatarPreview" src="{{ avatar_url }}" alt="Avatar Preview" class="avatar-preview w-32 h-32 rounded-full mx-auto mb-6"/>
-        <h1 class="text-3xl font-bold text-gray-800 mb-6 text-center">{{ user.username }}'s Profile</h1>
 
-        
+        <h1 class="text-3xl font-bold text-purple-400 mb-6 text-center">{{ user.username }}'s Profile</h1>
+
         <form method="post" enctype="multipart/form-data" class="space-y-6">
             {% csrf_token %}
             {{ form.non_field_errors }}
             <div class="form-group flex flex-col">
-                <label for="id_username" class="mb-2 font-semibold text-gray-700">Username:</label>
+                <label for="id_username" class="mb-2 font-semibold text-gray-800">Username:</label>
                 {{ form.username }}
                 {{ form.username.errors }}
             </div>
             <div class="form-group flex flex-col">
-                <label for="id_email" class="mb-2 font-semibold text-gray-700">Email:</label>
-                {{ form.email }}
-                {{ form.email.errors }}
-                
-                <button type="button" onclick="location.href=`{% url 'change_email' %}`" class="mt-2 bg-green-500 text-white font-semibold py-2 px-4 rounded hover:bg-green-600 transition-colors">
-                    Change Email
-                </button>
-            </div>
-            <div class="form-group flex flex-col">
-                <label for="id_first_name" class="mb-2 font-semibold text-gray-700">First Name:</label>
+                <label for="id_first_name" class="mb-2 font-semibold text-gray-800">First Name:</label>
                 {{ form.first_name }}
                 {{ form.first_name.errors }}
             </div>
             <div class="form-group flex flex-col">
-                <label for="id_last_name" class="mb-2 font-semibold text-gray-700">Last Name:</label>
+                <label for="id_last_name" class="mb-2 font-semibold text-gray-800">Last Name:</label>
                 {{ form.last_name }}
                 {{ form.last_name.errors }}
             </div>
             <div class="form-group flex flex-col">
-                <label for="id_avatar" class="mb-2 font-semibold text-gray-700">Choose Avatar Pic:</label>
+                <label class="mb-2 font-semibold text-gray-800">Email:</label>
+                <p class="text-gray-100">{{ user.email }}</p>
+                <button type="button" onclick="location.href=`{% url 'change_email' %}`" class="mt-2 bg-green-500 text-gray-800 font-semibold py-2 px-4 rounded hover:bg-green-600 transition-colors">
+                    Change Email
+                </button>
+            </div>
+            <div class="form-group flex flex-col">
+                <label for="id_avatar" class="mb-2 font-semibold text-gray-800">Choose Avatar Pic:</label>
                 {{ form.avatar }}
                 {{ form.avatar.errors }}
             </div>
             <div class="form-group flex flex-col">
-                <label for="id_bio" class="mb-2 font-semibold text-gray-700">Bio:</label>
+                <label for="id_bio" class="mb-2 font-semibold text-gray-800">Bio:</label>
                 {{ form.bio }}
                 {{ form.bio.errors }}
             </div>
             <div class="form-group flex flex-col">
-                <label for="id_github" class="mb-2 font-semibold text-gray-700">GitHub URL:</label>
+                <label for="id_github" class="mb-2 font-semibold text-gray-800">GitHub URL:</label>
                 {{ form.github }}
                 {{ form.github.errors }}
             </div>
             <div class="form-group flex flex-col">
-                <label for="id_website" class="mb-2 font-semibold text-gray-700">Personal Website:</label>
+                <label for="id_website" class="mb-2 font-semibold text-gray-800">Personal Website:</label>
                 {{ form.website }}
                 {{ form.website.errors }}
             </div>
-            <button type="submit" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-600 transition-colors">Update Profile</button>
+            <button type="submit" class="w-full bg-purple-500 text-white font-bold py-2 px-4 rounded hover:bg-purple-600 transition-colors">Update Profile</button>
         </form>
 
-        
         <div class="mt-6 flex justify-between">
             <a href="{% url 'change_password' %}" class="bg-yellow-500 text-white px-4 py-2 rounded-md hover:bg-yellow-600 transition-colors">
                 Change Password
@@ -101,12 +89,14 @@
             </a>
         </div>
 
-        
         <form action="{% url 'delete_profile' %}" method="post" class="mt-6" onsubmit="return confirm('Are you sure you want to delete your profile? This action cannot be undone.');">
             {% csrf_token %}
             <button type="submit" name="delete_profile" class="bg-red-500 text-white font-bold py-2 px-4 rounded hover:bg-red-600 transition-colors">Delete Profile</button>
         </form>
     </div>
+
+    
+    
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             fetch('/api/profiles/me/')
@@ -154,5 +144,7 @@
             }
         });
     </script>
+
+    
 </body>
 </html>
