--- a/templates/register.html
+++ b/templates/register.html
@@ -42,10 +42,9 @@
             </div>
             <button type="submit" class="w-full bg-purple-500 text-white py-2 px-4 rounded hover:bg-purple-600 transition-colors">Register</button>
         </form>
-        <div class="social-login mt-6 text-center">
-            <p class="text-gray-400 mb-2">Or register with:</p>
-            <a href="{% url 'google_login' %}" class="w-full bg-red-500 text-white py-2 px-4 rounded hover:bg-red-600 transition-colors inline-block text-center mb-2">Google</a>
-            <a href="{% url 'github_login' %}" class="w-full bg-gray-700 text-white py-2 px-4 rounded hover:bg-gray-800 transition-colors inline-block text-center">GitHub</a>
+        <div>
+            <p class="text-gray-400 mt-6 text-center">Already have an account?</p>
+            <button onclick="location.href = `{% url 'login' %}`" class="bg-green-500 text-white py-2 px-4 rounded hover:bg-blue-600 transition-colors w-full">Login</button>
         </div>
     </div>
 </body>
